--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"lint-staged": {
+		"*.{svelte,ts,js,json,md}": [
+		  "npm run lint",
+		  "npm run format"
+		]
+	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@neoconfetti/svelte": "^1.0.0",
