--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"lint-staged": {
-		"*.{svelte,ts,js,json,md}": [
+		"*.{svelte,ts,js,json}": [
 		  "npm run lint",
 		  "npm run format"
 		]
-	},
+	  },
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@neoconfetti/svelte": "^1.0.0",
